--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
   <body>
     <header>
       <div class="main-header container">
+        <a href="#main-content" class="skip-to-content">Skip to main content</a>
         <a class="brand-name" href="#/">Story App</a>
 
         <nav id="navigation-drawer" class="navigation-drawer">
