add service worker and notification api

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
           <section id="nav-home" hidden>
             <ul id="nav-list" class="nav-list">
               <li><a href="#/">Beranda</a></li>
+              <li><a href="#/" id="subscribe-notification">subscribe</a></li>
               <li><a href="#/logout">Logout</a></li>
             </ul>
           </section>
