--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
       referrerpolicy="no-referrer"
     />
     <title>App</title>
+    <link rel="manifest" href="app.webmanifest" />
   </head>
   <body>
     <header>
